fixed wrap

--- a/style.css
+++ b/style.css
@@ -191,10 +191,12 @@ max-width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 24px 16px;
 }
 
 .language__list{
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+    justify-content: center;
 }
